--- a/main.css
+++ b/main.css
@@ -1,40 +1,132 @@
-*{margin:0px;padding:3px;color: #181818 word-break; break-all; word-wrap; break-word; }
+* {
+  box-sizing: border-box;
+}
 
-body { font: 0.9em Georgia, "Times New Roman", Serif; background: #F5F5F5; }
-a { color: #37628d; text-decoration: none; }
-	a:hover { color: #668099;  }
-	a:visited{ color: #668099;  }
-p { line-height: 1.7em; margin: 0 0 1px; }
-.x { clear: both; }
+body {
+  margin: 0;
+}
 
-h1 { float: left; font-size: 2.3em; font-weight: normal; padding: 0 0 25px 0px; margin: 0 0 10px; color:#000000 }
-h2 { font-weight: normal; font-size: 1.8em; padding: 0 0 10px; margin: 0 0 5px; color: #37628d}
-h3 { font-size: 1.3em; font-weight: normal; margin: 0 0 5px; }
-	h3 a { color: #37628d; }
-	h3 a:hover{ color: #668099; }
-	h3 a:visited { color: #668099; }
-h4 { font-size: 0.9em; font-weight: normal; margin: 0 0 0px; }
-    h4 a { color: #37628d; }
-	h4 a:hover{ color: #668099; }
-	h4 a:visited { color: #668099; }
+/* Style the header */
+.header {
+  background-color: #f1f1f1;
+  text-align: center;
+}
 
-#content { width: 960px; margin: 1px auto; }
-#welcome { width: 960px; margin: 30px auto; }
+ul.nav {
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+list-style-type: none;
+  margin: 0;
+  padding: 0;
+overflow: hidden;
+  background-color: SteelBlue;
+}
 
-#menu { font-size: 1.8em; float: right; margin: 10px 1px 5px 10px; }
-	#menu li { display: inline; list-style: none; }
-	#menu li a { float: left; margin: 0 0 0 20px; color: #37628d; }
-		#menu li a:hover { color: #668099; }
-		#menu li a:visited { color: #668099; }
-		
 
-.post { clear: both; padding: 10px 0px; border-top: 1px solid #ddd; border-bottom: 0px solid #ddd; margin: 0 0 0px; }
-	.post .details { float: left; width: 190px; }
-	.post .details .info { font-size: 1.0em; color: #000000; padding: 10px 0 0 0; }
-		.post .details .info a { color: #323232 ; border-bottom: 1px dotted #999;}
-	.post .body { float: right; width: 700px; padding: 10px 0 0 30px; border-left: 1px solid #ddd;}
-	.post .body a{ color: #37628d;}
-	.post .body a:hover{ color: #668099; }
-	.post .body a:visited { color: #668099; }
-	
- 
+ul.nav li {
+Float:right;
+ }
+
+
+ul.nav li.left {float: left}
+
+ul.nav Li a {
+Display:block;
+color: MistyRose;
+  text-align: center;
+  text-decoration: none;
+padding: 1rem 2rem 1rem;
+}
+ul.nav Li a:hover {
+  background-color: #fff0ee;
+  color: SteelBlue;
+}
+
+img.avatar{
+width:250px; 
+float: left; 
+margin: 1rem 5rem 1rem 1rem
+}
+
+.container{
+width: 90%;
+margin: 0rem 5rem;
+padding: 5rem;
+}
+ul.body{
+list-style-type: none; /*circle,square,none*/
+}
+Li.body{
+}
+Li.body a:link {
+  color: steelblue;
+}
+
+/* visited link */
+Li.body a:visited {
+  color: skyblue;
+}
+}
+.about{
+margin: 2rem;
+padding: 3rem 5rem;
+font:1.8rem
+}
+
+
+.p1{
+Color: SteelBlue;
+Font: Bold 1.8rem Arial, sans-serif;
+}
+
+
+h2{
+Color: SteelBlue;
+Font: 1.8rem Arial, sans-serif;
+Border-bottom: 1px solid ;
+}
+h3{
+Color: #363945;
+Font: Arial, sans-serif;
+}
+
+.p2{
+Color: #363945;
+Font: normal Times New Roman,serif;
+}
+a:link {
+  color: steelblue;
+}
+
+/* visited link */
+a:visited {
+  color: skyblue;
+}
+
+/* mouse over link */
+a:hover {
+  color: skyblue;
+}
+
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  Img.avatar {
+    width: 45%;
+Float: none
+  }
+
+}
+
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  ul.nav Li {
+    float: none;
+    width: 100%;
+  }
+ul.nav Li a {
+padding: 1rem 10rem 1rem;
+}
+ul.nav li.left
+}
