--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body {
   padding: 2rem 0rem;
   height: 4rem;
   overflow: hidden;
-  background-image:url('ft6.jpg');
+  background-image:url('ft.jpg');
 }
 .pf{
   color: mistyrose;
